fix: thumbnails not stretched any more; some refactor stuff

--- a/app/catalog/catalog.styl
+++ b/app/catalog/catalog.styl
@@ -143,13 +143,6 @@
         .vidatios
             margin-bottom 30px
 
-            vidatio
-                margin-left calc(10vw - 15px)
-                margin-right calc(10vw - 15px)
-
-                img
-                    height 37vw !important
-
 @media (min-width: 768px) and (max-width: 991px)
     #catalog
         #filter
@@ -157,10 +150,6 @@
             width calc(100% - 30px)
             margin-left 15px
             margin-right 15px
-
-        vidatio
-            img
-                height 22vw !important
 
 @media screen and (max-width: 730px)
     #time-filter span.to
