--- a/app/components/vidatio/vidatio.styl
+++ b/app/components/vidatio/vidatio.styl
@@ -35,13 +35,12 @@ vidatio
             height auto
 
             img
-                width 100%
-                height 100px
-                max-width: 100%
+                width auto
+                height 95px
 
             img.placeholder
                 opacity 0.4
-                padding 12% 0
+                padding 8% 0
 
         a.img:hover ~ .text a
             color $color-hover-dark
@@ -91,3 +90,13 @@ vidatio
     vidatio
         margin-left calc(10vw - 15px)
         margin-right calc(10vw - 15px)
+
+        a.img
+            img
+                height 32vw !important
+
+@media (min-width: 768px) and (max-width: 991px)
+    vidatio
+        a.img
+            img
+                height 21vw !important
