--- a/app/index/index.styl
+++ b/app/index/index.styl
@@ -99,12 +99,11 @@
             height auto
 
             img.newest
-                width 100%
-                max-height 100%
+                width auto
                 height 150px
 
             img.placeholder
-                padding 40px 0
+                padding 10% 0
                 opacity 0.4
 
         .title
@@ -162,7 +161,7 @@
         margin-right calc(12vw - 15px)
 
         img
-            height 35vw !important
+            height 32vw !important
 
     #index #popular-categories
         height 440px
@@ -173,7 +172,7 @@
             #bubble-categories
                 margin-top -45px
 
-@media (min-width: 768px) and (max-width: 991px)
+@media (min-width: 768px) and (max-width: 1020px)
     #index #newest-vidatios .img-container
         img
             height 14vw !important
