--- a/app/profile/profile.styl
+++ b/app/profile/profile.styl
@@ -14,6 +14,7 @@
     .has-link
         padding-top 5px
         text-align center
+        margin-bottom 30px
 
         button
             width 200px
@@ -37,18 +38,3 @@
             bottom 0
             margin-top 25px
             margin-bottom 15px
-
-@media (max-width: 550px)
-    vidatio
-        img
-            height 30vw !important
-
-@media (min-width: 551px) and (max-width: 767px)
-    vidatio
-        img
-            height 33vw !important
-
-@media (min-width: 768px) and (max-width: 991px)
-    vidatio
-        img
-            height 20vw !important
